[gd_scene load_steps=10 format=3 uid="uid://cbxwkapqo0p1i"]

[ext_resource type="Script" path="res://scripts/UI/inspectable_window.gd" id="1_5lgu4"]
[ext_resource type="AudioStream" uid="uid://b64xjhfrpiuko" path="res://audio/sfx/note_pen_click.ogg" id="2_qayae"]

[sub_resource type="LabelSettings" id="LabelSettings_jalk5"]
font_size = 48

[sub_resource type="LabelSettings" id="LabelSettings_s2xny"]
font_size = 24

[sub_resource type="ViewportTexture" id="ViewportTexture_jt1uf"]
viewport_path = NodePath("SubViewport")

[sub_resource type="InputEventKey" id="InputEventKey_6b3bu"]
device = -1
keycode = 4194305

[sub_resource type="Shortcut" id="Shortcut_wfutk"]
events = [SubResource("InputEventKey_6b3bu")]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_flayg"]

[sub_resource type="SphereMesh" id="SphereMesh_63xdr"]
material = SubResource("StandardMaterial3D_flayg")
radius = 0.1
height = 0.2

[node name="InspectableWindow" type="CanvasLayer"]
layer = 5
script = ExtResource("1_5lgu4")

[node name="sfxSpotPOI" type="AudioStreamPlayer" parent="."]
stream = ExtResource("2_qayae")

[node name="ColorRect" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.54902)

[node name="VBoxContainer" type="VBoxContainer" parent="."]
custom_minimum_size = Vector2(0, 1080)
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 193.0
grow_horizontal = 2

[node name="Title" type="Label" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 2
text = "NAME"
label_settings = SubResource("LabelSettings_jalk5")
horizontal_alignment = 1

[node name="Description" type="Label" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 2
text = "DESC"
label_settings = SubResource("LabelSettings_s2xny")
horizontal_alignment = 1

[node name="TextureRect" type="TextureRect" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 900)
layout_mode = 2
texture = SubResource("ViewportTexture_jt1uf")
expand_mode = 1
stretch_mode = 2

[node name="CloseButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 10
shortcut = SubResource("Shortcut_wfutk")
text = "CLOSE"

[node name="SubViewport" type="SubViewport" parent="."]
own_world_3d = true
transparent_bg = true
size = Vector2i(1920, 1080)

[node name="InspectableModel" type="Node3D" parent="SubViewport"]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -1, -2)

[node name="POIRaycast" type="RayCast3D" parent="SubViewport"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 5)
target_position = Vector3(0, 0, -1000)
collision_mask = 2
hit_back_faces = false
collide_with_areas = true

[node name="MeshInstance3D" type="MeshInstance3D" parent="SubViewport/POIRaycast"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -2)
visible = false
mesh = SubResource("SphereMesh_63xdr")

[node name="Camera3D" type="Camera3D" parent="SubViewport"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 5)

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="SubViewport"]

[connection signal="pressed" from="VBoxContainer/CloseButton" to="." method="_on_close_button_pressed"]
